--- a/CAI_Expendedora/CAI_Expendedora/CAI_Expendedora.csproj
+++ b/CAI_Expendedora/CAI_Expendedora/CAI_Expendedora.csproj
@@ -46,10 +46,12 @@
     <Compile Include="CapacidadInsuficienteException.cs" />
     <Compile Include="CodigoInvalidoException.cs" />
     <Compile Include="CodigoLata.cs" />
+    <Compile Include="DineroInsuficienteException.cs" />
     <Compile Include="Expendedora.cs" />
     <Compile Include="Lata.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinStockException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
